--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
 
 <div class="container">
-    <h2>JEE Main 2024 Percentile to Rank Converter</h2>
+    <h2>JEE Main 2024 I Percentile to Rank Converter</h2>
     <label for="percentile">Enter Percentile:</label>
     <input type="number" id="percentile" min="0" max="100" step="0.01" placeholder="Enter percentile">
     <label for="category">Select Category:</label>
