--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         switch(category) {
             case 'General':
-                totalStudents = 1221615;
+                totalStudents = 1170036
                 break;
             case 'EWS':
                 totalStudents = 154840;
@@ -120,7 +120,7 @@
                 categoryRank = 'ST Rank';
                 break;
             default:
-                totalStudents = 1221615;
+                totalStudents = 1170036;
         }
 
         if (isNaN(percentile) || percentile < 0 || percentile > 100) {
